--- a/action-a/Dockerfile
+++ b/action-a/Dockerfile
@@ -1,5 +1,5 @@
 FROM debian:9.5-slim
 
-ADD entrypoint2.sh /entrypoint2.sh
-RUN chmod +x /entrypoint2.sh
-ENTRYPOINT ["/entrypoint2.sh"]
+ADD entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
+ENTRYPOINT ["/entrypoint.sh"]
